Fix margins on iphone, buttons for vendors

--- a/public/css/sass/something_blue.scss
+++ b/public/css/sass/something_blue.scss
@@ -196,6 +196,10 @@ div#the-big-day{
     float: left;
     &.vendors{
       float: right;
+      button.btn-lg{
+      font-size: 1.2em;
+      color: $black;
+    }
     }
     &.made-by-the-groom{
       img{
@@ -751,7 +755,7 @@ div#nav{
 
   div.guide{
     @include clearfix;
-    margin-bottom: 100px;
+    margin: 0 0 100px 0;
     h2{
       font-size: 1.3em;
       border-bottom: 1px solid #aaa;
@@ -790,8 +794,9 @@ div#nav{
       position: absolute;
       width: 415px;
       height: 152px;
-      left: 24px;
+      left: 46px;
       top: -8px;
+      // background: red;
 
     }
     div.ribbon{
@@ -819,9 +824,12 @@ div#nav{
       margin-right: 10px;
     }
     ul{
+      margin: 0;
+      padding: 0;
       list-style: none;
       li{
-        width: 430px;
+        width: 454px;
+        margin: 0 10px 20px 0;
         > div{
           font-size: 2.0em;
           padding: 20px 20px 5px 20px;
@@ -831,10 +839,9 @@ div#nav{
     }
     &.getting-there{
       ul li{
-        // TODO don't use percentage!
-        width: 48%;
+        width: auto;
         > div{
-          height: 1535px;
+          height: auto;
           font-size: 2.0em;
         }
       }
